Bug 1348657 - implement framesEncoded, pliCount, nackCount and firCount for webrtc stats r=jib,smaug

MozReview-Commit-ID: E873mbcrlLL